--- a/1 Linear Regression/1_1_Linear_Regression_Direct_Solution.ipynb
+++ b/1 Linear Regression/1_1_Linear_Regression_Direct_Solution.ipynb
@@ -76,14 +76,16 @@
         "#these will be the coefficients (a0 will be constant term)\n",
         "a0,a1,a2,a3=1,2,0.5,3\n",
         "\n",
+        "#generate random data\n",
         "X=np.random.rand(100,4)\n",
+        "#for bias term\n",
         "X[:,0]=np.ones(100)\n",
-        "Y=a1*X[:,1]+a2*X[:,2]+a3*X[:,3]+a0*X[:,0]+0.4*np.random.rand(100) #this last term is some random noise/error"
+        "Y=a1*X[:,1]+a2*X[:,2]+a3*X[:,3]+a0*X[:,0]+0.3*np.random.rand(100) #this last term is some random noise/error"
       ],
       "metadata": {
         "id": "3_uC_9lXa4Yg"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -106,7 +108,7 @@
       "metadata": {
         "id": "btFETja3fUXn"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -119,19 +121,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "keEVFJNVg4uN",
-        "outputId": "9fb753d1-5d03-4385-8de6-0a7e781f73ab"
+        "outputId": "6262eb27-28f4-46d2-851d-3a0769c4c7f5"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([1.25704998, 2.00903871, 0.39784826, 2.97976513])"
+              "array([1.18602106, 1.9881795 , 0.48046248, 2.986637  ])"
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 6
         }
       ]
     },
@@ -140,15 +142,7 @@
       "source": [
         "Hooray! Our strategy works!\n",
         "\n",
-        "I note the amount of noise vs. the errors of the coefficients\n",
-        "\n",
-        "0.05- 0.002\n",
-        "\n",
-        "0.1 - 0.005\n",
-        "\n",
-        "0.2 - 0.01\n",
-        "\n",
-        "0.4 - they vary???"
+        "The coefficients match pretty well"
       ],
       "metadata": {
         "id": "C-vCJ7FolTcl"
@@ -160,7 +154,7 @@
       "metadata": {
         "id": "PUPiHWQ4la9x"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     }
   ]
